--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -6,7 +6,7 @@
     
 
     "menu.home":"Accueil",
-    "menu.metro":"Metro",
+    "menu.transport":"Transport",
     "menu.param":"Paramètres",
     
     
