add leaflet map

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
 
     "menu.home":"Home",
     "menu.transport":"Transport",
+    "menu.citymap":"Map",
     "menu.param":"Parameters",
     
     "transport.renderimg":"Draw Transport Line",
