added manual edit of GPS position for accessibility

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,9 @@
     "citymap.streetpolygon": "Render road/streets as polygons",
     "citymap.footpathonly": "Include only footpath",
     "citymap.maptitle": "City Map",
+    "citymap.latitude": "Latitude",
+    "citymap.longitude": "Longitude",
+    "citymap.radius": "Radius (meters)",
 
     "preview.savesvg":"Save as SVG",
 
