--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -18,11 +18,12 @@
     
     "transport.renderimg":"Dessiner la/les ligne(s) de transport",
     "transport.renderstation":"Dessiner les stations",
-    "transport.renderfill":"Le tracé utilise les stations",
+    
     "transport.sectionplan":"Affichage des lignes de transports",
     "transport.strategyways":"Données de tracé OSM",
     "transport.strategywayscorreted":"Données OSM corrigées",
     "transport.strategystation":"Position des stations",
+    "transport.renderstrategy":"Strategie de rendu de la ligne de transport",
 
     "citymap.sectionplan":"Construction de plan",
     "citymap.rendermap":"Extraction de la zone de carte",
