enable serach by wikidata id to address ambiguous city name (Saint-Denis near Paris and Saint-Denis on Reunion island)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,8 @@
     
     "transport.title":"Transport line extraction",
     "transport.city":"City name",
+    "transport.wikidata":"Wikidata id",
+    "transport.place_id":"Place id",
     "transport.renderimg":"Draw Transport Line",
     "transport.renderstation":"Draw stations",
     "transport.search":"Search",
