--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -57,6 +57,7 @@
 
     "citymap.sectionplan":"Construction de plan",
     "citymap.rendermap":"Extraction de la zone de carte",
+    "citymap.building": "Inclure les immeubles",
     "citymap.streetpolygon": "Polygones pour les routes/chemins",
     "citymap.footpathonly": "Pieton seulement",
     "citymap.maptitle": "Plan de ville",
