--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,18 +15,25 @@
 
     "home.openstreetmap":"This software make heavy use of OpenStreetMap data. All these data are subjected to ODbL license. See OpenStreetMap web site for more information.",
     "menu.home":"Home",
+    "menu.home.shortcut":"H",
     "menu.transport":"Transport",
+    "menu.transport.shortcut":"T",
     "menu.citymap":"Map",
+    "menu.citymap.shortcut":"M",
     "menu.param":"Parameters",
+    "menu.param.shortcut":"P",
     "menu.exit":"Exit",
+    "menu.exit.shortcut":"x",
     
     "transport.title":"Transport line extraction",
     "transport.city":"City name",
+    "transport.city.edit.shortcut":"n",
     "transport.wikidata":"Wikidata id",
     "transport.place_id":"Place id",
     "transport.renderimg":"Draw Transport Line",
     "transport.renderstation":"Draw stations",
     "transport.search":"Search",
+    "transport.search.shortcut":"S",
     "transport.sectionplan":"Transport Line(s) rendering",
     "transport.strategyways":"Path from OSM data",
     "transport.strategywayscorreted":"OSM data corrected",
@@ -51,8 +58,10 @@
     "transport.type.light_rail":"Light Train",
     "transport.type.monorail":"Monorail",
     "transport.type.ferry":"Ferry",
-
-
+    "transport.sectionrequest":"OpenStreetMap request for city",
+    "transport.sectiondata":"Map data handling",
+    "transport.sectionline":"Transport line selection",
+    
     "citymap.sectionplan":"Street Map rendering",
     "citymap.rendermap":"Draw extracted Map",
     "citymap.building": "Include buildings",
@@ -65,13 +74,17 @@
     "citymap.water": "Include water area",
     "citymap.cliping": "Clip map",
     "citymap.mousegps":"Click on the map to get the position",
+    "citymap.sectionrender": "Extract data from map",
+    "citymap.sectionpos":"Map position",
+
+
     "preview.savesvg":"Save as SVG",
 
     "param.locale":"Application language",
     
     "param.formtitle":"Parameters",
     "param.form_aria":"Application parameters",
-    
+    "param.focuspolicy": "Set focus on navigate",
     
     
     
