add section in parameters

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -85,7 +85,7 @@
     "param.formtitle":"Parameters",
     "param.form_aria":"Application parameters",
     "param.focuspolicy": "Set focus on navigate",
-    
+    "param.general.section":"General parameters",
     
     
     
