--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -86,7 +86,7 @@
     "param.formtitle":"Paramètres",
     "param.form_aria":"Paramètres de l'application",
     "param.focuspolicy": "Positionner le focus lors de la navigation",
-    
+    "param.general.section":"Paramètres de l'application",
     
     
     
