remove unused key. auto format json

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,8 +1,6 @@
 {
-    "app.loading":"Loading in progress…",
-
-    "app.wait":"Wait…",
-
+    "app.loading": "Loading in progress…",
+    "app.wait": "Wait…",
     "file.open": "Open",
     "file.save": "Save",
     "file.saveas": "Save as",
@@ -10,60 +8,56 @@
     "file.gcodefile": "GCODE file",
     "file.svgfile": "SVG File",
     "file.all": "All",
-    "file.txtfile":"Text file",
-    "file.pngfile":"PNG file",
-
-    "home.openstreetmap":"This software make heavy use of OpenStreetMap data. All these data are subjected to ODbL license. See OpenStreetMap web site for more information.",
-    "menu.home":"Home",
-    "menu.home.shortcut":"H",
-    "menu.transport":"Transport",
-    "menu.transport.shortcut":"T",
-    "menu.citymap":"Map",
-    "menu.citymap.shortcut":"M",
-    "menu.param":"Parameters",
-    "menu.param.shortcut":"P",
-    "menu.exit":"Exit",
-    "menu.exit.shortcut":"x",
-    
-    "transport.title":"Transport line extraction",
-    "transport.city":"City name",
-    "transport.city.edit.shortcut":"n",
-    "transport.wikidata":"Wikidata id",
-    "transport.place_id":"Place id",
-    "transport.renderimg":"Draw Transport Line",
-    "transport.renderstation":"Draw stations",
-    "transport.search":"Search",
-    "transport.search.shortcut":"S",
-    "transport.sectionplan":"Transport Line(s) rendering",
-    "transport.strategyways":"Path from OSM data",
-    "transport.strategywayscorreted":"OSM data corrected",
-    "transport.strategystation":"Stations position",
-    "transport.renderstrategy":"Transport line drawing strategy",
-    "transport.type":"Transport type (osm)",
-    "transport.iso639":"City name language",
-    "transport.osmcityname":"City name in OSM",
-    "transport.nodata":"No data",
-    "transport.osmpending":"Search in progress …",
+    "file.txtfile": "Text file",
+    "file.pngfile": "PNG file",
+    "home.openstreetmap": "This software make heavy use of OpenStreetMap data. All these data are subjected to ODbL license. See OpenStreetMap web site for more information.",
+    "menu.home": "Home",
+    "menu.home.shortcut": "H",
+    "menu.transport": "Transport",
+    "menu.transport.shortcut": "T",
+    "menu.citymap": "Map",
+    "menu.citymap.shortcut": "M",
+    "menu.param": "Parameters",
+    "menu.param.shortcut": "P",
+    "menu.exit": "Exit",
+    "menu.exit.shortcut": "x",
+    "transport.title": "Transport line extraction",
+    "transport.city": "City name",
+    "transport.city.edit.shortcut": "n",
+    "transport.wikidata": "Wikidata id",
+    "transport.place_id": "Place id",
+    "transport.renderimg": "Draw Transport Line",
+    "transport.renderstation": "Draw stations",
+    "transport.search": "Search",
+    "transport.search.shortcut": "S",
+    "transport.sectionplan": "Transport Line(s) rendering",
+    "transport.strategyways": "Path from OSM data",
+    "transport.strategywayscorreted": "OSM data corrected",
+    "transport.strategystation": "Stations position",
+    "transport.renderstrategy": "Transport line drawing strategy",
+    "transport.type": "Transport type (osm)",
+    "transport.iso639": "City name language",
+    "transport.osmcityname": "City name in OSM",
+    "transport.nodata": "No data",
+    "transport.osmpending": "Search in progress …",
     "transport.polygon": "Line paths as polygons",
-    "transport.downloadsvg":"Save image as SVG",
-    "transport.downloadpng":"Save image as PNG",
-    "transport.downloadtxt":"Save stations as TXT",
-    "transport.titleresult":"Save result",
-
-    "transport.type.subway":"Subway",
-    "transport.type.funicular":"Funicular",
-    "transport.type.bus":"Bus/Car",
-    "transport.type.tram":"Tramway",
-    "transport.type.train":"Train",
-    "transport.type.light_rail":"Light Train",
-    "transport.type.monorail":"Monorail",
-    "transport.type.ferry":"Ferry",
-    "transport.sectionrequest":"OpenStreetMap request for city",
-    "transport.sectiondata":"Map data handling",
-    "transport.sectionline":"Transport line selection",
-    
-    "citymap.sectionplan":"Street Map rendering",
-    "citymap.rendermap":"Draw extracted Map",
+    "transport.downloadsvg": "Save image as SVG",
+    "transport.downloadpng": "Save image as PNG",
+    "transport.downloadtxt": "Save stations as TXT",
+    "transport.titleresult": "Save result",
+    "transport.type.subway": "Subway",
+    "transport.type.funicular": "Funicular",
+    "transport.type.bus": "Bus/Car",
+    "transport.type.tram": "Tramway",
+    "transport.type.train": "Train",
+    "transport.type.light_rail": "Light Train",
+    "transport.type.monorail": "Monorail",
+    "transport.type.ferry": "Ferry",
+    "transport.sectionrequest": "OpenStreetMap request for city",
+    "transport.sectiondata": "Map data handling",
+    "transport.sectionline": "Transport line selection",
+    "citymap.sectionplan": "Street Map rendering",
+    "citymap.rendermap": "Draw extracted Map",
     "citymap.building": "Include buildings",
     "citymap.streetpolygon": "Render road/streets as polygons",
     "citymap.footpathonly": "Include only footpath",
@@ -73,28 +67,13 @@
     "citymap.radius": "Radius (meters)",
     "citymap.water": "Include water area",
     "citymap.cliping": "Clip map",
-    "citymap.mousegps":"Click on the map to get the position",
+    "citymap.mousegps": "Click on the map to get the position",
     "citymap.sectionrender": "Extract data from map",
-    "citymap.sectionpos":"Map position",
-
-
-    "preview.savesvg":"Save as SVG",
-
-    "param.locale":"Application language",
-    
-    "param.formtitle":"Parameters",
-    "param.form_aria":"Application parameters",
+    "citymap.sectionpos": "Map position",
+    "preview.savesvg": "Save as SVG",
+    "param.locale": "Application language",
+    "param.formtitle": "Parameters",
+    "param.form_aria": "Application parameters",
     "param.focuspolicy": "Set focus on navigate",
-    "param.general.section":"General parameters",
-    
-    
-    
-    
-
-    
-    "toolbar.confirm.deleteall": "Voulez allez effacer le document. Etes vous sure ?"
-
-    
-    
+    "param.general.section": "General parameters"
 }
-
