--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -21,7 +21,7 @@
     "menu.exit": "Quitter",
     "menu.exit.shortcut": "x",
     "home.openstreetmap": "Ce logiciel utilise des données issue du project OpenStreetMap. Voir le site d'OpenStreetMap pour plus d'informations.",
-    "transport.title": "Extraction ligne de transport",
+    "transport.title": "Rendu des lignes de transport",
     "transport.city": "Nom de ville",
     "transport.city.edit.shortcut": "V",
     "transport.wikidata": "Id Wikidata",
@@ -39,6 +39,7 @@
     "transport.iso639": "Langue de la ville",
     "transport.osmcityname": "Nom de la ville dans OSM",
     "transport.nodata": "Aucune donnée",
+    "transport.nblines":"Nombre de lignes de transport",
     "transport.osmpending": "Recherche en cours …",
     "transport.polygon": "Polygones pour tracés de lignes",
     "transport.downloadsvg": "Enregistrer l'image en SVG",
