--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,6 +39,7 @@
     "transport.iso639": "City name language",
     "transport.osmcityname": "City name in OSM",
     "transport.nodata": "No data",
+    "transport.nblines":"Transport lines count",
     "transport.osmpending": "Search in progress …",
     "transport.polygon": "Line paths as polygons",
     "transport.downloadsvg": "Save image as SVG",
