--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,10 +57,11 @@
     "transport.sectionrequest": "OpenStreetMap request for city",
     "transport.sectiondata": "Map data handling",
     "transport.sectionline": "Transport line selection",
+    "transport.findosmcity": "Search a city in OSM",
     "citymap.sectionplan": "Street Map rendering",
     "citymap.rendermap": "Draw extracted Map",
     "citymap.building": "Include buildings",
-    "citymap.streetpolygon": "Render road/streets as polygons",
+    "citymap.streetpolygon": "Render road and streets as polygons",
     "citymap.footpathonly": "Include only footpath",
     "citymap.maptitle": "City Map",
     "citymap.latitude": "Latitude",
