--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -26,7 +26,7 @@
     "transport.city.edit.shortcut": "V",
     "transport.wikidata": "Id Wikidata",
     "transport.place_id": "Type Emplacement",
-    "transport.renderimg": "Dessiner la/les ligne(s) de transport",
+    "transport.renderimg": "Dessiner les lignes de transport",
     "transport.renderstation": "Dessiner les stations",
     "transport.search": "Rechercher",
     "transport.search.shortcut": "R",
@@ -37,9 +37,9 @@
     "transport.renderstrategy": "Strategie de rendu de la ligne de transport",
     "transport.type": "Type transport (OSM)",
     "transport.iso639": "Langue de la ville",
-    "transport.osmcityname": "Nom de la ville dans OSM",
+    "transport.osmcityname": "Ville dans OSM",
     "transport.nodata": "Aucune donnée",
-    "transport.nblines":"Nombre de lignes de transport",
+    "transport.nblines":"Nombre de résultats",
     "transport.osmpending": "Recherche en cours …",
     "transport.polygon": "Polygones pour tracés de lignes",
     "transport.downloadsvg": "Enregistrer l'image en SVG",
@@ -47,6 +47,7 @@
     "transport.downloadtxt": "Enregistrer les stations en TXT",
     "transport.titleresult": "Enregistrer les résultats",
     "transport.type.subway": "Métro",
+    "transport.findosmcity": "Rechercher une ville dans OSM",
     "transport.type.funicular": "Funiculaire",
     "transport.type.bus": "Bus/Car",
     "transport.type.tram": "Tramway",
@@ -60,7 +61,7 @@
     "citymap.sectionplan": "Construction de plan",
     "citymap.rendermap": "Extraction de la zone de carte",
     "citymap.building": "Inclure les immeubles",
-    "citymap.streetpolygon": "Polygones pour les routes/chemins",
+    "citymap.streetpolygon": "Polygones pour les routes et chemins",
     "citymap.footpathonly": "Pieton seulement",
     "citymap.maptitle": "Plan de ville",
     "citymap.latitude": "Latitude",
