--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -58,12 +58,13 @@
     "transport.sectiondata": "Map data handling",
     "transport.sectionline": "Transport line selection",
     "transport.findosmcity": "Search a city in OSM",
+    "citymap.extractposition":"Map area position",
     "citymap.sectionplan": "Street Map rendering",
     "citymap.rendermap": "Draw extracted Map",
     "citymap.building": "Include buildings",
     "citymap.streetpolygon": "Render road and streets as polygons",
     "citymap.footpathonly": "Include only footpath",
-    "citymap.maptitle": "City Map",
+    "citymap.maptitle": "Map extraction",
     "citymap.latitude": "Latitude",
     "citymap.longitude": "Longitude",
     "citymap.radius": "Radius (meters)",
